k8s/DB-Statfulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: finance-db-sts
  namespace: finance-app
spec:
  serviceName: "finance-db-svc" # Service명과 매칭시키기. 
  replicas: 1
  selector:
    matchLabels:
      app: finance-db
  template:
    metadata:
      labels:
        app: finance-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-pvc
          mountPath: /var/lib/mysql
