k8s/finance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-deployment
  namespace: finance-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: finance-app
  template:
    metadata:
      labels:
        app: finance-app
    spec:
      # ========================================================
      # initContainer
      # ========================================================
      containers:
      - name: finance-app-container
        image: toymas24/project1-team2-app:1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
